--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 .DS_Store
+main.aux
+main.bbl
+main.bcf
+main.blg
+main.fdb_latexmk
+main.fls
+main.lof
+main.log
+main.out
+main.run.xml
+main.synctex.gz
+main.toc
